[package]
name = "fast-slice-utils"
version = "0.1.1"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Highly optimized slice utilities using SIMD instructions when available"
repository = "https://github.com/luketpeterson/fast-slice-utils"
keywords = ["simd", "performance", "slice", "avx2", "neon"]
categories = ["algorithms", "no-std", "text-processing", "parsing"]
readme = "README.md"

[features]
nightly = [] # Uses features in the nightly tool chain for better performance
miri_safe = []

[dependencies]

[dev-dependencies]
divan = "0.1.21"
rand = { version = "0.9.0" }
rand_distr = { version = "0.5.1" }

[[bench]]
name = "find_prefix_overlap"
harness = false
